# diach

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
Diach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
diach/: __init__.py  cli.py
